<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeedTest App</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example action</string>
    <string name="action_search">Search</string>
    <string name="new_test_button">New test</string>
    <string name="drawer_section1">Speed test</string>
    <string name="drawer_section2">Local results</string>
    <string name="drawer_section3">Global results</string>
    <string name="drawer_section4">Charts</string>
    <string name="drawer_section5">Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="service_not_available">Service not available.</string>
    <string name="invalid_lat_long_used">Invalid lat/long values.</string>
    <string name="no_address_found">No addresses found.</string>
    <string name="search_hint">Search location</string>
    <string name="filter_title">FILTER</string>
    <string name="filter_download">Download:</string>
    <string name="filter_upload">Upload:</string>
    <string name="filter_isp">Isp:</string>
    <string name="filter_time">Time:</string>
    <string name="filter_button">Apply</string>
    <string name="search_button">Search</string>

</resources>
